--- a/nginx.conf
+++ b/nginx.conf
@@ -218,3 +218,34 @@ server {
         add_header Content-Type text/plain;
     }
 }
+
+# ComfyUI
+server {
+    listen 443 ssl;
+    server_name comfyui.lan;
+
+    # Longer timeouts for model operations
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
+
+    location / {
+        proxy_pass http://host.docker.internal:8188;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
+        proxy_intercept_errors on;
+        error_page 502 =200 /maintenance.html;
+    }
+
+    location /maintenance.html {
+        return 200 "The ComfyUI service is starting up. Please refresh in a moment.";
+        add_header Content-Type text/plain;
+    }
+}
