landing page and local certs

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
 # Nginx configuration for HTTPS reverse proxy
+
 # SSL settings
 ssl_certificate /etc/nginx/certs/local-cert.pem;
 ssl_certificate_key /etc/nginx/certs/local-key.pem;
@@ -13,6 +14,18 @@ server {
     listen 80;
     server_name *.lan;
     return 301 https://$host$request_uri;
+}
+
+# Directory listing page
+server {
+    listen 443 ssl;
+    server_name raven.lan;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
 }
 
 # Status Dashboard
@@ -215,6 +228,27 @@ server {
 
     location /maintenance.html {
         return 200 "The Supabase service is starting up. Please refresh in a moment.";
+        add_header Content-Type text/plain;
+    }
+}
+
+# NocoDB
+server {
+    listen 443 ssl;
+    server_name nocodb.lan;
+
+    location / {
+        proxy_pass http://nocodb:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_intercept_errors on;
+        error_page 502 =200 /maintenance.html;
+    }
+
+    location /maintenance.html {
+        return 200 "The NocoDB service is starting up. Please refresh in a moment.";
         add_header Content-Type text/plain;
     }
 }
