--- a/nginx.conf
+++ b/nginx.conf
@@ -81,27 +81,6 @@ server {
     }
 }
 
-# Flowise
-server {
-    listen 443 ssl;
-    server_name flowise.lan;
-
-    location / {
-        # Direct proxy pass instead of variable
-        proxy_pass http://flowise:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_intercept_errors on;
-        error_page 502 =200 /maintenance.html;
-    }
-
-    location /maintenance.html {
-        return 200 "The Flowise service is starting up. Please refresh in a moment.";
-        add_header Content-Type text/plain;
-    }
-}
 
 # Open WebUI
 server {
@@ -157,27 +136,6 @@ server {
     }
 }
 
-# Qdrant
-server {
-    listen 443 ssl;
-    server_name qdrant.lan;
-
-    location / {
-        # Direct proxy pass instead of variable
-        proxy_pass http://qdrant:6333;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_intercept_errors on;
-        error_page 502 =200 /maintenance.html;
-    }
-
-    location /maintenance.html {
-        return 200 "The Qdrant service is starting up. Please refresh in a moment.";
-        add_header Content-Type text/plain;
-    }
-}
 
 # Ollama
 server {
@@ -280,6 +238,38 @@ server {
 
     location /maintenance.html {
         return 200 "The ComfyUI service is starting up. Please refresh in a moment.";
+        add_header Content-Type text/plain;
+    }
+}
+
+
+# Crawl4AI
+server {
+    listen 443 ssl;
+    server_name crawl4ai.lan;
+
+    # Longer timeouts might be needed depending on crawl duration
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
+
+    location / {
+        proxy_pass http://crawl4ai:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade"; # For potential WebSockets
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
+        proxy_intercept_errors on;
+        error_page 502 =200 /maintenance.html;
+    }
+
+    location /maintenance.html {
+        return 200 "The Crawl4AI service is starting up. Please refresh in a moment.";
         add_header Content-Type text/plain;
     }
 }
