change supabase.lan to studio.lan

--- a/nginx.conf
+++ b/nginx.conf
@@ -171,7 +171,7 @@ server {
 # Supabase
 server {
     listen 443 ssl;
-    server_name supabase.lan;
+    server_name studio.lan;
 
     location / {
         # Use supabase-studio instead of db
