--- a/nginx.conf
+++ b/nginx.conf
@@ -190,6 +190,39 @@ server {
     }
 }
 
+# Supabase API Gateway
+server {
+    listen 443 ssl;
+    server_name supabase.lan;
+
+    # Longer timeouts might be needed depending on API usage
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
+
+    location / {
+        # Proxy to the Supabase Kong gateway
+        proxy_pass http://kong:8000; # Assuming standard Supabase docker setup
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade"; # For potential WebSockets
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off; # Important for streaming responses
+        proxy_intercept_errors on;
+        error_page 502 =200 /maintenance.html;
+    }
+
+    location /maintenance.html {
+        return 200 "The Supabase API service is starting up. Please refresh in a moment.";
+        add_header Content-Type text/plain;
+    }
+}
+
+
 # NocoDB
 server {
     listen 443 ssl;
